Fix alignment of filter arrow

--- a/src/customizations/aftersearch-nav/_aftersearch-nav.scss
+++ b/src/customizations/aftersearch-nav/_aftersearch-nav.scss
@@ -551,6 +551,7 @@
             @include media('>=tablet') {
                 margin-top: 0;
                 right: 1rem;
+                bottom: 1.5rem;
 
                 &:before,
                 &:after {
